--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>CAVALOS POCOTO</title>
 </head>
 <body>
-   
+   <h1>Amamos cavalos</h1>
+   <h6>site para mostrar o quanto nos amamos cavalos</h6>
+   <p>o mundo precisa entender como cavalos sao importantes para o nosso mundo </p>
 
 </body>
 </html>
