--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h1>Amamos cavalos</h1>
    <h6>site para mostrar o quanto nos amamos cavalos</h6>
    <p>o mundo precisa entender como cavalos sao importantes para o nosso mundo </p>
-   <img src=".pngcavalos" alt="cavalos">
+   <img src="cavalos.png" alt="cavalos">
 
 
 </body>
